fix: add death date to list customer
